# CodeLens

./: .gitignore  Cargo.toml  README.md  demo-file.js  index.js  install.sh  package.json  readme.md  test-monitor.js  test.js
src/: app.rs  main.rs  ui.rs  watcher.rs
